--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -16,11 +16,11 @@
             <li><a href="../index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Sobre o Clube</a>
-                <div class="dropdown-conteudo">
+                <section class="dropdown-conteudo">
                     <a href="historia.html">História</a>
                     <a href="idolos.html">Ídolos</a>
                     <a href="titulos.html">Títulos</a>
-                </div>
+                </section>
             </li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
